--- a/package.json
+++ b/package.json
@@ -57,7 +57,9 @@
         "clsx": "^2.0.0",
         "cmdk": "^0.2.0",
         "date-fns": "^2.30.0",
+        "laravel-echo": "^1.15.3",
         "lucide-react": "^0.294.0",
+        "pusher-js": "^8.4.0-rc2",
         "react-day-picker": "^8.9.1",
         "react-hook-form": "^7.49.0",
         "tailwind-merge": "^2.1.0",
